--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 </head>
 <body>
   <header>
+    <div style="text-align: center; margin-top: 30px;">
+  <img src="logo.png" alt="Company Logo" style="max-width: 200px;">
+</div>
+
+<div style="text-align: center; margin-top: 30px;">
+  <img src="TradeLicense.jpg" alt="Trade License" style="max-width: 300px; border: 1px solid #ccc;">
+</div>
+
     <h1>MASLANIEC GROUP – FZCO</h1>
     <p>Your trusted relocation & lifestyle consultant in Dubai</p>
   </header>
