--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MASLANIEC GROUP – FZCO</title>
+  
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; color: #333; background-color: #f9f9f9; }
     header, footer { background: #003366; color: #fff; padding: 20px; text-align: center; }
@@ -51,7 +51,8 @@
     </section>
     <section class="certificate">
       <h2>Company Certificate</h2>
-      <img src="certificate-placeholder.png" alt="Company Certificate">
+      <img src="TradeLicense.jpg" alt="Trade License" style="max-width: 400px; margin-top: 20px;">
+
     </section>
     <section>
       <h2>Our Team</h2>
