--- a/index.html
+++ b/index.html
@@ -3,75 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <title>Maslaniec Group – FZCO</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; color: #333; background-color: #f9f9f9; }
-    header, footer { background: #003366; color: #fff; padding: 20px; text-align: center; }
-    main { padding: 20px; max-width: 1000px; margin: auto; background: #fff; }
-    h1, h2, h3 { color: #003366; }
-    ul { list-style-type: square; margin-left: 20px; }
-    .contact { background: #f0f0f0; padding: 15px; margin-top: 30px; }
-    .certificate { text-align: center; margin: 20px 0; }
-    .certificate img { max-width: 300px; border: 1px solid #ccc; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f5f5; }
+    header { background: #002855; color: white; padding: 20px; text-align: center; }
+    section { padding: 30px; background: white; margin: 20px auto; max-width: 800px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    h2 { color: #002855; }
+    .service { margin-bottom: 20px; padding: 15px; background: #f0f8ff; border-left: 5px solid #002855; border-radius: 5px; }
+    .cta { display: inline-block; margin-top: 10px; padding: 10px 20px; background: #0072ce; color: white; border-radius: 5px; text-decoration: none; }
+    .testimonial { font-style: italic; margin-top: 10px; }
+    .whatsapp-link { display: block; text-align: center; margin-top: 30px; font-weight: bold; font-size: 18px; color: #25d366; text-decoration: none; }
+    .founder-photo { width: 120px; border-radius: 50%; margin-bottom: 10px; }
   </style>
 </head>
 <body>
   <header>
-    <div style="text-align: center; margin-top: 30px;">
-  <img src="logo.png" alt="Company Logo" style="max-width: 200px;">
-</div>
-
-<div style="text-align: center; margin-top: 30px;">
-  <img src="TradeLicense.jpg" alt="Trade License" style="max-width: 300px; border: 1px solid #ccc;">
-</div>
-
     <h1>MASLANIEC GROUP – FZCO</h1>
-    <p>Your trusted relocation & lifestyle consultant in Dubai</p>
+    <p>Relocation | Business Setup | Personal Guidance in Dubai</p>
   </header>
-  <main>
-    <section>
-      <h2>About Us</h2>
-      <p>MASLANIEC GROUP – FZCO was created with one goal in mind: to help people change their lives. We guide individuals and families who want to relocate to Dubai and build a better, more luxurious lifestyle. This is our passion – and we’re the best at it. We’ve been through the journey ourselves, and now we help others do the same.</p>
-      <p>Helping people improve their lives isn’t just our job – it’s our purpose.</p>
-    </section>
-    <section>
-      <h2>What We Offer</h2>
-      <ul>
-        <li>Relocation & visa guidance</li>
-        <li>Finding rental or residential property</li>
-        <li>School and education advisory</li>
-        <li>Company setup (Free Zone or Mainland)</li>
-        <li>Personal and business branding & identity</li>
-        <li>Car rental, lease or buying support</li>
-        <li>Opening bank accounts for expats</li>
-        <li>Healthcare & insurance advisory</li>
-        <li>Local culture and everyday life guidance</li>
-        <li>Connecting with trusted, licensed providers</li>
-      </ul>
-    </section>
-    <section class="certificate">
-      <h2>Company Certificate</h2>
-      <img src="TradeLicense.jpg" alt="Trade License" style="max-width: 400px; margin-top: 20px;">
 
-    </section>
-    <section>
-      <h2>Our Team</h2>
-      <p><strong>Founder:</strong> Wojciech Masłaniec</p>
-      <p><strong>General Manager:</strong> Mikołaj Mateusz Masłaniec</p>
-    </section>
-    <section class="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
-      <p>Phone (UAE): +971 58 587 6880</p>
-      <p>Phone (Ireland): +353 85 835 2721</p>
-    </section>
-    <section>
-      <h2>Legal Disclaimer</h2>
-      <p>MASLANIEC GROUP – FZCO is a consulting firm and does not act as an agent or broker. We provide professional advice and connect clients with licensed service providers. All actions related to visas, real estate, or regulated services are performed by licensed third parties.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 MASLANIEC GROUP – FZCO. All rights reserved.</p>
-  </footer>
+  <section>
+    <h2>About the Founder</h2>
+    <img src="your-photo.jpg" alt="Wojtek" class="founder-photo">
+    <p>👋 Cześć, nazywam się Wojtek. Sam przeniosłem się do Dubaju i wiem, jak wiele pytań się pojawia. Dlatego pomagam innym przejść tę drogę szybciej, bez stresu. Jeśli marzysz o nowym życiu – pomogę Ci je zaplanować.</p>
+  </section>
+
+  <section>
+    <h2>Our Main Services</h2>
+    <div class="service">
+      <h3>🌍 Relocation Package – from 1,500 AED</h3>
+      <p>Visa, Emirates ID, housing, bank account, school support – full support for your move to Dubai.</p>
+      <a class="cta" href="https://wa.me/971585876880">Book Now</a>
+    </div>
+    <div class="service">
+      <h3>🏢 Company Setup + Visa – from 1,000 AED</h3>
+      <p>We help you choose the best free zone, submit documents, and guide you step by step through the setup process.</p>
+      <a class="cta" href="https://wa.me/971585876880">Book Now</a>
+    </div>
+    <div class="service">
+      <h3>💬 1:1 Consultation – 300 AED</h3>
+      <p>30-minute personal session to ask anything about Dubai life, business, or moving.</p>
+      <a class="cta" href="https://wa.me/971585876880">Book Now</a>
+    </div>
+  </section>
+
+  <section>
+    <h2>What Our Clients Say</h2>
+    <p class="testimonial">“Wojtek poprowadził nas od A do Z – teraz mieszkamy w Dubai Marina!” – Anna & Michał</p>
+    <p class="testimonial">“Dzięki niemu założyłem firmę i dostałem wizę bez stresu.” – Krzysztof z Irlandii</p>
+  </section>
+
+  <section>
+    <h2>How It Works – Step by Step</h2>
+    <ol>
+      <li>Intro call or WhatsApp chat</li>
+      <li>Choose your service (relocation, business setup, consultation)</li>
+      <li>We support you step by step</li>
+      <li>You enjoy your new life in Dubai</li>
+    </ol>
+  </section>
+
+  <a class="whatsapp-link" href="https://wa.me/971585876880">📲 Start Chat on WhatsApp Now</a>
 </body>
 </html>
