--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MASLANIEC GROUP</title>
+</head>
+<body>
+  <h1>Welcome to MASLANIEC GROUP</h1>
+  <p>This is the new beginning of our official website.</p>
+</body>
+</html>
