--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <header>
-    <img src="WhatsApp%20Image%202025-03-31%20at%2012.21.29.jpeg" alt="Logo" class="logo">
+    <img src="WhatsApp Image 2025-03-31 at 11.20.21.jpeg" alt="Maslaniec Group Logo" class="logo">
     <h1>MASLANIEC GROUP</h1>
     <p>Business Consulting | Investments | Strategy</p>
   </header>
