--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MASLANIEC GROUP</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #0b0c10;
+      color: #f5f5f5;
+      text-align: center;
+    }
+    header {
+      background-color: #1f2833;
+      padding: 40px 20px;
+    }
+    header h1 {
+      font-size: 48px;
+      margin: 0;
+      color: #66fcf1;
+    }
+    header p {
+      font-size: 20px;
+      color: #c5c6c7;
+    }
+    section {
+      padding: 60px 20px;
+    }
+    section h2 {
+      color: #66fcf1;
+      font-size: 32px;
+    }
+    .logo {
+      max-width: 200px;
+      margin-top: 20px;
+    }
+    footer {
+      background-color: #1f2833;
+      padding: 20px;
+      font-size: 14px;
+      color: #c5c6c7;
+    }
+    a {
+      color: #45a29e;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="logo.jpg" alt="Maslaniec Group Logo" class="logo">
+    <h1>MASLANIEC GROUP</h1>
+    <p>Business Consulting | Investments | Strategy</p>
+  </header>
+
+  <section>
+    <h2>About Us</h2>
+    <p>We are a Dubai-based consultancy dedicated to empowering entrepreneurs, guiding them through the process of starting and growing their business in the UAE.</p>
+  </section>
+
+  <section>
+    <h2>Our Services</h2>
+    <p>Company Setup • PRO Services • Marketing Strategy • Real Estate Investments • Business Coaching</p>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>Contact us at <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
+  </section>
+
+  <footer>
+    &copy; 2025 MASLANIEC GROUP — All rights reserved
+  </footer>
+</body>
+</html>
 
