--- a/index.html
+++ b/index.html
@@ -3,77 +3,90 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MASLANIEC GROUP</title>
+  <title>Maslaniec Group</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #0b0c10;
-      color: #f5f5f5;
-      text-align: center;
+      background-color: #ffffff;
+      color: #222222;
     }
     header {
-      background-color: #1f2833;
+      background-color: #002244;
+      color: #fff;
       padding: 40px 20px;
+      text-align: center;
+    }
+    header img {
+      max-width: 150px;
+      margin-bottom: 20px;
     }
     header h1 {
-      font-size: 48px;
+      font-size: 42px;
       margin: 0;
-      color: #66fcf1;
     }
     header p {
-      font-size: 20px;
-      color: #c5c6c7;
+      font-size: 18px;
+      margin: 10px 0 0;
     }
     section {
       padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
     }
     section h2 {
-      color: #66fcf1;
-      font-size: 32px;
+      font-size: 28px;
+      color: #002244;
     }
-    .logo {
-      max-width: 200px;
-      margin-top: 20px;
+    section p {
+      font-size: 18px;
+      line-height: 1.6;
     }
     footer {
-      background-color: #1f2833;
+      background-color: #eeeeee;
+      color: #333;
       padding: 20px;
+      text-align: center;
       font-size: 14px;
-      color: #c5c6c7;
     }
     a {
-      color: #45a29e;
+      color: #002244;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.jpg" alt="Maslaniec Group Logo" class="logo">
-    <h1>MASLANIEC GROUP</h1>
-    <p>Business Consulting | Investments | Strategy</p>
+    <img src="logo.jpg" alt="Maslaniec Group Logo">
+    <h1>Maslaniec Group</h1>
+    <p>Strategic Business Consulting in the UAE</p>
   </header>
 
   <section>
-    <h2>About Us</h2>
-    <p>We are a Dubai-based consultancy dedicated to empowering entrepreneurs, guiding them through the process of starting and growing their business in the UAE.</p>
+    <h2>Who We Are</h2>
+    <p>Maslaniec Group is a professional consultancy based in Dubai, supporting entrepreneurs and investors in building successful ventures in the United Arab Emirates. We provide clear guidance, local expertise, and tailored business strategies.</p>
   </section>
 
   <section>
     <h2>Our Services</h2>
-    <p>Company Setup • PRO Services • Marketing Strategy • Real Estate Investments • Business Coaching</p>
+    <p>
+      <strong>• Company Formation</strong><br>
+      <strong>• PRO & Government Services</strong><br>
+      <strong>• Market Entry Strategy</strong><br>
+      <strong>• Real Estate Advisory</strong><br>
+      <strong>• Branding & Digital Presence</strong>
+    </p>
   </section>
 
   <section>
-    <h2>Contact</h2>
-    <p>Contact us at <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
+    <h2>Get in Touch</h2>
+    <p>Email us at <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
   </section>
 
   <footer>
-    &copy; 2025 MASLANIEC GROUP — All rights reserved
+    &copy; 2025 Maslaniec Group — All rights reserved
   </footer>
 </body>
 </html>
-
