--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -83,6 +84,14 @@
   <section>
     <h2>Get in Touch</h2>
     <p>Email us at <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
+
+<p style="margin-top: 20px;">
+  <a href="https://wa.me/9715876880" target="_blank" style="display:inline-block;background:#25D366;color:white;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:bold;">Contact via WhatsApp</a>
+</p>
+
+<p style="margin-top: 20px;">
+  <a href="https://instagram.com/maslaniecgroup" target="_blank">Follow us on Instagram</a>
+</p>
   </section>
 
   <footer>
