--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +9,8 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #ffffff;
-      color: #222222;
+      background-color: #002244;
+      color: #ffffff;
     }
     header {
       background-color: #002244;
@@ -39,21 +38,21 @@
     }
     section h2 {
       font-size: 28px;
-      color: #002244;
+      color: #66fcf1;
     }
     section p {
       font-size: 18px;
       line-height: 1.6;
     }
     footer {
-      background-color: #eeeeee;
-      color: #333;
+      background-color: #002244;
+      color: #ffffff;
       padding: 20px;
       text-align: center;
       font-size: 14px;
     }
     a {
-      color: #002244;
+      color: #66fcf1;
       text-decoration: none;
     }
   </style>
