--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maslaniec Group</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -13,9 +13,10 @@
       color: #ffffff;
     }
     header {
-      background-color: #002244;
-      color: #fff;
-      padding: 40px 20px;
+      background-image: url('img/IMG_3705.jpeg');
+      background-size: cover;
+      background-position: center;
+      padding: 100px 20px;
       text-align: center;
     }
     header img {
@@ -29,6 +30,16 @@
     header p {
       font-size: 18px;
       margin: 10px 0 0;
+    }
+    .btn {
+      display: inline-block;
+      margin: 20px 10px;
+      padding: 12px 24px;
+      background-color: #66fcf1;
+      color: #002244;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
     }
     section {
       padding: 60px 20px;
@@ -45,57 +56,82 @@
       line-height: 1.6;
     }
     footer {
-      background-color: #002244;
+      background-color: #00172d;
       color: #ffffff;
       padding: 20px;
       text-align: center;
       font-size: 14px;
     }
-    a {
-      color: #66fcf1;
-      text-decoration: none;
+    .lang-switch {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: #66fcf1;
+      color: #002244;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
+  <div class="lang-switch">🇬🇧 / 🇵🇱</div>
+
   <header>
-    <img src="logo.jpg" alt="Maslaniec Group Logo">
-    <h1>Maslaniec Group</h1>
-    <p>Strategic Business Consulting in the UAE</p>
+    <img src="logo.jpg" alt="Maslaniec Group Logo" />
+    <h1>Maslaniec Group FZCO</h1>
+    <p>Helping You Relocate to Dubai with Confidence</p>
+    <p>Real People. Real Support. Real Results.</p>
+    <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
+    <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
   </header>
 
   <section>
+    <h2>🇵🇱 We Speak Polish</h2>
+    <p>Masz pytania? Mówimy po polsku – napisz do nas śmiało!</p>
+  </section>
+
+  <section>
     <h2>Who We Are</h2>
-    <p>Maslaniec Group is a professional consultancy based in Dubai, supporting entrepreneurs and investors in building successful ventures in the United Arab Emirates. We provide clear guidance, local expertise, and tailored business strategies.</p>
+    <p>We’re a family-run business created by Wojciech and Mikołaj Masłaniec. After 17 years abroad, we now help people relocate to Dubai and start fresh — with real support and practical help every step of the way.</p>
+  </section>
+
+  <section>
+    <h2>Our Mission</h2>
+    <p>Our philosophy is simple: people first. We offer more than just services — we offer peace of mind. We care. We guide. We finish what we start.</p>
   </section>
 
   <section>
     <h2>Our Services</h2>
     <p>
-      <strong>• Company Formation</strong><br>
-      <strong>• PRO & Government Services</strong><br>
-      <strong>• Market Entry Strategy</strong><br>
-      <strong>• Real Estate Advisory</strong><br>
-      <strong>• Branding & Digital Presence</strong>
+      ✅ Relocation to Dubai<br>
+      ✅ Company Registration<br>
+      ✅ Visa & Residency Help<br>
+      ✅ School Enrollment<br>
+      ✅ Bank Account Setup<br>
+      ✅ Real Estate Support<br>
+      ✅ Payroll (WPS)<br>
+      ✅ Legal, Tax, and Business Advisors
     </p>
   </section>
 
   <section>
-    <h2>Get in Touch</h2>
-    <p>Email us at <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
+    <h2>Pricing & Consultations</h2>
+    <p><a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">30 Min – AED 200</a></p>
+    <p><a class="btn" href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank">60 Min – AED 350</a></p>
+    <p><a class="btn" href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank">Premium + Email – AED 450</a></p>
+  </section>
 
-<p style="margin-top: 20px;">
-  <a href="https://wa.me/971585876880"
- target="_blank" style="display:inline-block;background:#25D366;color:white;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:bold;">Contact via WhatsApp</a>
-</p>
-
-<p style="margin-top: 20px;">
-  <a href="https://instagram.com/maslaniecgroup" target="_blank">Follow us on Instagram</a>
-</p>
+  <section>
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
+    <p><a class="btn" href="https://wa.me/971585876880" target="_blank">Message on WhatsApp</a></p>
+    <p><a href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a> | <a href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Maslaniec Group — All rights reserved
+    &copy; 2025 Maslaniec Group FZCO – All Rights Reserved
   </footer>
 </body>
 </html>
