--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
       background-color: #002244;
       color: #ffffff;
     }
-    header {
-      background-image: url('img/IMG_3705.jpeg');
-      background-size: cover;
-      background-position: center;
-      padding: 100px 20px;
-      text-align: center;
+    <header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
+  <img src="logo.jpg" alt="Maslaniec Group Logo" style="max-width:150px; margin-bottom:20px;">
+  <h1>Maslaniec Group FZCO</h1>
+  <p>Helping You Relocate to Dubai with Confidence</p>
+  <p>Real People. Real Support. Real Results.</p>
+  <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
+  <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
+</header>
+
     }
     header img {
       max-width: 150px;
