--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
       background-color: #002244;
       color: #ffffff;
     }
-    <header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
-  <img src="logo.jpg" alt="Maslaniec Group Logo" style="max-width:150px; margin-bottom:20px;">
-  <h1>Maslaniec Group FZCO</h1>
-  <p>Helping You Relocate to Dubai with Confidence</p>
-  <p>Real People. Real Support. Real Results.</p>
-  <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
-  <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
+   <header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
+  <div style="background-color: rgba(0, 0, 0, 0.6); padding: 40px 20px; border-radius: 10px; display: inline-block;">
+    <img src="logo.jpg" alt="Maslaniec Group Logo" style="max-width:150px; margin-bottom:20px;">
+    <h1 style="color: #ffffff; font-size: 36px; margin: 0;">Maslaniec Group FZCO</h1>
+    <p style="color: #ffffff; font-size: 18px; margin: 10px 0 0;">Helping You Relocate to Dubai with Confidence</p>
+    <p style="color: #ffffff; font-size: 16px; margin: 5px 0 20px;">Real People. Real Support. Real Results.</p>
+    <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
+    <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
+  </div>
+</header>
+
 </header>
 
     }
