--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: #002244;
       color: #ffffff;
     }
-  <header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
+<header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
   <div style="background-color: rgba(0, 0, 0, 0.6); padding: 40px 20px; border-radius: 10px; display: inline-block;">
     <img src="logo.jpg" alt="Maslaniec Group Logo" style="max-width:150px; margin-bottom:20px;">
     <h1 style="color: #ffffff; font-size: 36px; margin: 0;">Maslaniec Group FZCO</h1>
@@ -21,6 +21,8 @@
     <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
     <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
   </div>
+</header>
+
 </header>
 
     }
