--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
       color: #ffffff;
     }
 <header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
-  <div style="background-color: rgba(0, 0, 0, 0.6); padding: 40px 20px; border-radius: 10px; display: inline-block;">
-    <img src="logo.jpg" alt="Maslaniec Group Logo" style="max-width:150px; margin-bottom:20px;">
+  <div style="background-color: rgba(0, 0, 0, 0.5); padding: 40px 20px; border-radius: 10px; display: inline-block;">
+    <img src="logo.jpg" alt="Maslaniec Group Logo" style="width: 150px; height: auto; margin-bottom: 20px;">
     <h1 style="color: #ffffff; font-size: 36px; margin: 0;">Maslaniec Group FZCO</h1>
     <p style="color: #ffffff; font-size: 18px; margin: 10px 0 0;">Helping You Relocate to Dubai with Confidence</p>
     <p style="color: #ffffff; font-size: 16px; margin: 5px 0 20px;">Real People. Real Support. Real Results.</p>
-    <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
-    <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
+    <a href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank" style="background-color: #66fcf1; color: #002244; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-weight: bold; display: inline-block; margin: 10px;">Book 30-Min Consultation</a>
+    <a href="https://wa.me/971585876880" target="_blank" style="background-color: #66fcf1; color: #002244; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-weight: bold; display: inline-block; margin: 10px;">Contact via WhatsApp</a>
   </div>
+</header>
+
 </header>
 
 </header>
