--- a/index.html
+++ b/index.html
@@ -3,144 +3,71 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maslaniec Group</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <title>Maslaniec Group FZCO</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
+      font-family: sans-serif;
       background-color: #002244;
-      color: #ffffff;
+      color: #fff;
     }
-<header style="background-image: url('IMG_5586.jpeg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center;">
-  <div style="background-color: rgba(0, 0, 0, 0.5); padding: 40px 20px; border-radius: 10px; display: inline-block;">
-    <img src="logo.jpg" alt="Maslaniec Group Logo" style="width: 150px; height: auto; margin-bottom: 20px;">
-    <h1 style="color: #ffffff; font-size: 36px; margin: 0;">Maslaniec Group FZCO</h1>
-    <p style="color: #ffffff; font-size: 18px; margin: 10px 0 0;">Helping You Relocate to Dubai with Confidence</p>
-    <p style="color: #ffffff; font-size: 16px; margin: 5px 0 20px;">Real People. Real Support. Real Results.</p>
-    <a href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank" style="background-color: #66fcf1; color: #002244; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-weight: bold; display: inline-block; margin: 10px;">Book 30-Min Consultation</a>
-    <a href="https://wa.me/971585876880" target="_blank" style="background-color: #66fcf1; color: #002244; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-weight: bold; display: inline-block; margin: 10px;">Contact via WhatsApp</a>
-  </div>
-</header>
-
-</header>
-
-</header>
-
+    header {
+      background-image: url('IMG_5586.jpeg');
+      background-size: cover;
+      background-position: center;
+      text-align: center;
+      padding: 120px 20px;
+      position: relative;
+    }
+    header::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+    header .content {
+      position: relative;
+      z-index: 2;
+      display: inline-block;
+      background: rgba(0,0,0,0.6);
+      padding: 30px;
+      border-radius: 10px;
     }
     header img {
-      max-width: 150px;
+      width: 150px;
       margin-bottom: 20px;
     }
-    header h1 {
-      font-size: 42px;
+    h1 {
+      font-size: 36px;
       margin: 0;
     }
-    header p {
+    p {
       font-size: 18px;
-      margin: 10px 0 0;
+      margin: 10px 0;
     }
     .btn {
       display: inline-block;
-      margin: 20px 10px;
-      padding: 12px 24px;
       background-color: #66fcf1;
       color: #002244;
+      padding: 12px 24px;
+      margin: 10px;
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
     }
-    section {
-      padding: 60px 20px;
-      max-width: 900px;
-      margin: auto;
-      text-align: center;
-    }
-    section h2 {
-      font-size: 28px;
-      color: #66fcf1;
-    }
-    section p {
-      font-size: 18px;
-      line-height: 1.6;
-    }
-    footer {
-      background-color: #00172d;
-      color: #ffffff;
-      padding: 20px;
-      text-align: center;
-      font-size: 14px;
-    }
-    .lang-switch {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background: #66fcf1;
-      color: #002244;
-      padding: 8px 12px;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
-  <div class="lang-switch">🇬🇧 / 🇵🇱</div>
-
   <header>
-    <img src="logo.jpg" alt="Maslaniec Group Logo" />
-    <h1>Maslaniec Group FZCO</h1>
-    <p>Helping You Relocate to Dubai with Confidence</p>
-    <p>Real People. Real Support. Real Results.</p>
-    <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
-    <a class="btn" href="https://wa.me/971585876880" target="_blank">Contact via WhatsApp</a>
+    <div class="content">
+      <img src="logo.jpg" alt="Maslaniec Group Logo" />
+      <h1>Maslaniec Group FZCO</h1>
+      <p>Helping You Relocate to Dubai with Confidence</p>
+      <p>Real People. Real Support. Real Results.</p>
+      <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">Book 30-Min Consultation</a>
+      <a class="btn" href="https://wa.me/971585876880" target="_blank">WhatsApp Us</a>
+    </div>
   </header>
-
-  <section>
-    <h2>🇵🇱 We Speak Polish</h2>
-    <p>Masz pytania? Mówimy po polsku – napisz do nas śmiało!</p>
-  </section>
-
-  <section>
-    <h2>Who We Are</h2>
-    <p>We’re a family-run business created by Wojciech and Mikołaj Masłaniec. After 17 years abroad, we now help people relocate to Dubai and start fresh — with real support and practical help every step of the way.</p>
-  </section>
-
-  <section>
-    <h2>Our Mission</h2>
-    <p>Our philosophy is simple: people first. We offer more than just services — we offer peace of mind. We care. We guide. We finish what we start.</p>
-  </section>
-
-  <section>
-    <h2>Our Services</h2>
-    <p>
-      ✅ Relocation to Dubai<br>
-      ✅ Company Registration<br>
-      ✅ Visa & Residency Help<br>
-      ✅ School Enrollment<br>
-      ✅ Bank Account Setup<br>
-      ✅ Real Estate Support<br>
-      ✅ Payroll (WPS)<br>
-      ✅ Legal, Tax, and Business Advisors
-    </p>
-  </section>
-
-  <section>
-    <h2>Pricing & Consultations</h2>
-    <p><a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">30 Min – AED 200</a></p>
-    <p><a class="btn" href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank">60 Min – AED 350</a></p>
-    <p><a class="btn" href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank">Premium + Email – AED 450</a></p>
-  </section>
-
-  <section>
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
-    <p><a class="btn" href="https://wa.me/971585876880" target="_blank">Message on WhatsApp</a></p>
-    <p><a href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a> | <a href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a></p>
-  </section>
-
-  <footer>
-    &copy; 2025 Maslaniec Group FZCO – All Rights Reserved
-  </footer>
 </body>
 </html>
