--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maslaniec Group FZCO</title>
   <style>
     body {
@@ -10,47 +10,65 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #001f33;
       color: #ffffff;
-      text-align: center;
     }
 
-    header {
+    /* HERO SECTION */
+    .hero {
       background-image: url('516AB383-597B-4EB6-A4BA-9B7A0FBC7CDE_1_105_c.jpeg');
       background-size: cover;
       background-position: center;
+      height: 100vh;
       position: relative;
-      padding: 120px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
 
-    header::before {
+    .hero::before {
       content: '';
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.6);
+      inset: 0;
+      background: rgba(0, 0, 0, 0.65);
     }
 
-    .header-content {
+    .hero-content {
       position: relative;
       z-index: 2;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(10px);
+      padding: 30px;
+      background: rgba(0, 0, 0, 0.4);
       border-radius: 12px;
+      max-width: 600px;
+      margin: auto;
     }
 
-    header img {
-      width: 140px;
+    .hero-content img {
+      width: 120px;
       margin-bottom: 20px;
     }
 
-    h1 {
+    .hero-content h1 {
       font-size: 36px;
-      margin: 0;
+      margin-bottom: 10px;
     }
 
-    p {
+    .hero-content p {
       font-size: 18px;
-      margin: 10px 0;
+      margin: 5px 0;
+    }
+
+    section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 28px;
+      margin-bottom: 20px;
+      color: #66fcf1;
     }
 
     .btn {
@@ -64,17 +82,12 @@
       font-weight: bold;
     }
 
-    section {
-      padding: 60px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
     footer {
       background: #000d1a;
       padding: 30px;
+      text-align: center;
+      color: #aaa;
       font-size: 14px;
-      color: #ccc;
     }
 
     a {
@@ -85,56 +98,59 @@
 </head>
 <body>
 
-  <header>
-    <div class="header-content">
+  <!-- HERO SECTION -->
+  <div class="hero">
+    <div class="hero-content">
       <img src="logo.jpg" alt="Maslaniec Group Logo" />
       <h1>Maslaniec Group FZCO</h1>
       <p>Helping You Relocate to Dubai</p>
       <p>Real People. Real Support. Real Results.</p>
-      <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">30-Min Consultation</a>
-      <a class="btn" href="https://wa.me/971585876880" target="_blank">WhatsApp Us</a>
     </div>
-  </header>
+  </div>
 
-  <section>
-    <h2>We Speak Polish 🇵🇱</h2>
-    <p>Masz pytania? Napisz do nas po polsku – chętnie pomożemy!</p>
-  </section>
-
+  <!-- ABOUT -->
   <section>
     <h2>About Us</h2>
-    <p>We are Wojciech and Mikołaj Masłaniec – father and son, originally from Poland, living 17 years in Ireland, now based in Dubai.</p>
-    <p>We created Maslaniec Group to help people start a new life in the UAE – with trust, honesty, and real support.</p>
+    <p>We are Wojciech and Mikołaj Masłaniec – father and son, originally from Poland, with 17 years in Ireland and now living in Dubai.</p>
+    <p>We created Maslaniec Group to help people move, settle, and thrive in the UAE.</p>
   </section>
 
+  <!-- SERVICES -->
   <section>
     <h2>Our Services</h2>
     <p>
       ✅ Relocation to Dubai<br>
-      ✅ Business Registration<br>
-      ✅ Visa & Residency Help<br>
-      ✅ Bank Account Setup<br>
-      ✅ School Enrollment for Kids<br>
-      ✅ Real Estate Support<br>
+      ✅ Business Setup & Registration<br>
+      ✅ Visa & Residency Assistance<br>
+      ✅ Bank Account Opening<br>
+      ✅ School Enrollment for Children<br>
+      ✅ Real Estate Consulting<br>
       ✅ Payroll (WPS)<br>
-      ✅ Legal, Accounting & Business Advisors
+      ✅ Legal & Financial Expert Support
     </p>
   </section>
 
+  <!-- LANGUAGE -->
   <section>
-    <h2>Follow Us</h2>
-    <p>
-      <a class="btn" href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a>
-      <a class="btn" href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a>
-    </p>
+    <h2>We Speak Polish 🇵🇱</h2>
+    <p>Masz pytania? Napisz do nas po polsku – odpowiemy szybko i konkretnie.</p>
   </section>
 
+  <!-- CONTACT & CONSULTATION -->
   <section>
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
-    <p><a class="btn" href="https://wa.me/971585876880" target="_blank">Chat on WhatsApp</a></p>
+    <h2>Consultations & Contact</h2>
+    <p>Schedule a call or message us directly:</p>
+    <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">30-Min Consultation – AED 200</a>
+    <a class="btn" href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank">60-Min Consultation – AED 350</a>
+    <a class="btn" href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank">Premium + Follow-up – AED 450</a>
+    <br><br>
+    <a class="btn" href="https://wa.me/971585876880" target="_blank">WhatsApp Us</a>
+    <a class="btn" href="mailto:maslaniecgroup@gmail.com">Email Us</a>
+    <a class="btn" href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a>
+    <a class="btn" href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     &copy; 2025 Maslaniec Group FZCO – All rights reserved.
   </footer>
