--- a/index.html
+++ b/index.html
@@ -8,84 +8,93 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f7fa;
-      color: #1a1a1a;
+      background-color: #0c1c38;
+      color: #ffffff;
     }
 
     header {
-      padding: 100px 20px 60px;
+      padding: 80px 20px 50px;
       text-align: center;
-      background-color: #ffffff;
-      border-bottom: 1px solid #e0e0e0;
+      background-color: #0c1c38;
     }
 
     header img {
-      width: 140px;
+      width: 180px;
       margin-bottom: 20px;
     }
 
     header h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
-      color: #001f33;
+      font-size: 42px;
+      margin: 10px 0;
+      color: #00fff7;
     }
 
     header p {
       font-size: 20px;
-      color: #444;
-      margin-bottom: 10px;
-    }
-
-    nav {
-      text-align: center;
-      padding: 20px 0;
-      background-color: #ffffff;
-      border-bottom: 1px solid #e0e0e0;
-    }
-
-    nav a {
-      margin: 0 15px;
-      color: #001f33;
-      font-weight: bold;
-      text-decoration: none;
+      color: #cce6ff;
+      margin: 10px 0;
     }
 
     section {
       padding: 60px 20px;
       max-width: 900px;
       margin: auto;
-      text-align: center;
+      text-align: left;
     }
 
     h2 {
       font-size: 28px;
-      color: #001f33;
       margin-bottom: 20px;
+      color: #00fff7;
+      text-align: center;
     }
 
-    p {
+    ul {
+      list-style: none;
+      padding: 0;
       font-size: 18px;
-      color: #333;
-      line-height: 1.6;
+      line-height: 1.8;
+    }
+
+    ul li::before {
+      content: "✅";
+      margin-right: 12px;
+      color: #00fff7;
+      font-size: 18px;
+    }
+
+    .testimonial {
+      margin-bottom: 30px;
+      font-size: 18px;
+      color: #e0e0e0;
     }
 
     .btn {
       display: inline-block;
-      margin: 10px;
+      margin: 10px 5px;
       padding: 14px 28px;
-      background: #001f33;
-      color: #ffffff;
+      background: #00fff7;
+      color: #0c1c38;
       text-decoration: none;
       font-weight: bold;
       border-radius: 6px;
     }
 
     footer {
-      background-color: #001f33;
-      color: #ccc;
+      background-color: #000d1a;
+      color: #999;
       text-align: center;
       padding: 30px 20px;
       font-size: 14px;
+    }
+
+    a {
+      color: #00fff7;
+      text-decoration: none;
+    }
+
+    .centered {
+      text-align: center;
     }
   </style>
 </head>
@@ -95,52 +104,53 @@
     <img src="logo.jpg" alt="Maslaniec Group Logo" />
     <h1>Maslaniec Group FZCO</h1>
     <p>Strategic Relocation & Business Consulting in the UAE</p>
-    <p>Helping clients relocate, build, and succeed — the right way.</p>
   </header>
-
-  <nav>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Blog</a>
-    <a href="#">Contact</a>
-  </nav>
-
-  <section>
-    <h2>What Makes Us Different</h2>
-    <p>
-      At Maslaniec Group, we combine passion, precision and proven experience.  
-      We know what matters — clear guidance, reliable execution and real results.  
-      Our clients trust us to make relocation to Dubai easy and stress-free.
-    </p>
-  </section>
 
   <section>
     <h2>Why Clients Choose Us</h2>
-    <p>
-      ✅ Personalized, one-on-one consulting<br>
-      ✅ No generic packages – we tailor solutions<br>
-      ✅ Trusted by professionals from Poland, the UK, Ireland, and the USA<br>
-      ✅ End-to-end support: business, visa, banking, schooling, housing<br>
-      ✅ Responsive, reliable and fully connected in the UAE
-    </p>
+    <ul>
+      <li>Personalized, one-on-one consulting</li>
+      <li>No generic packages – we tailor solutions</li>
+      <li>Trusted by professionals from Poland, the UK, Ireland, and the USA</li>
+      <li>End-to-end support: business, visa, banking, schooling, housing</li>
+      <li>Responsive, reliable and fully connected in the UAE</li>
+    </ul>
   </section>
 
   <section>
-    <h2>Book a Consultation</h2>
-    <p>Ready to move? Let's talk.</p>
+    <h2>Our Services</h2>
+    <ul>
+      <li>Relocation consulting – moving to Dubai from Europe</li>
+      <li>Business setup and company formation</li>
+      <li>Opening personal and business bank accounts</li>
+      <li>Visa and residence permit assistance</li>
+      <li>School application support for families</li>
+      <li>Real estate and rental guidance</li>
+      <li>WPS and payroll setup</li>
+      <li>Connections to verified legal, tax, and accounting experts</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Client Testimonials</h2>
+    <div class="testimonial">“I didn't expect such a big change in my life, but thanks to Wojtek and Mikołaj, I moved to Dubai and found a new purpose.” – Anna (Poland)</div>
+    <div class="testimonial">“Their step-by-step help gave me clarity and confidence. I highly recommend them!” – James (Ireland)</div>
+    <div class="testimonial">“Relocating to Dubai was the best decision of my life – made possible by Maslaniec Group.” – Sarah (USA)</div>
+    <div class="testimonial">“I didn’t know where to begin – they made the impossible simple.” – David (UK)</div>
+    <div class="testimonial">“Professional, kind, and always available. 10/10 service!” – Karolina (Poland)</div>
+  </section>
+
+  <section class="centered">
+    <h2>Contact & Consultations</h2>
     <a class="btn" href="https://buy.stripe.com/bIYeV12Kb18zdOg7ss" target="_blank">30 Min – AED 200</a>
     <a class="btn" href="https://buy.stripe.com/14k14bacD9F539CfYZ" target="_blank">60 Min – AED 350</a>
     <a class="btn" href="https://buy.stripe.com/4gw8wDdoPaJ9dOg3ce" target="_blank">Premium – AED 450</a>
-  </section>
-
-  <section>
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:maslaniecgroup@gmail.com">maslaniecgroup@gmail.com</a></p>
-    <p><a class="btn" href="https://wa.me/971585876880" target="_blank">WhatsApp Us</a></p>
-    <p>
-      <a href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a> | 
-      <a href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a>
-    </p>
+    <br><br>
+    <a class="btn" href="https://wa.me/971585876880" target="_blank">WhatsApp Us</a>
+    <a class="btn" href="mailto:maslaniecgroup@gmail.com">Email</a>
+    <br><br>
+    <a href="https://instagram.com/maslaniecgroup" target="_blank">Instagram</a> |
+    <a href="https://www.tiktok.com/@mikolaj.maslaniec" target="_blank">TikTok</a>
   </section>
 
   <footer>
